--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
+    "styled-components": "^6.0.7",
     "three": "^0.155.0",
     "web-vitals": "^2.1.4"
   },
