--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3a8385",
-  "background_color": "#3a8385"
+  "theme_color": "#317678",
+  "background_color": "#317678"
 }
